hphp/hack/test/typecheck/invalid_arraykey/invalid_arraykey.php.exp
File "invalid_arraykey.php", line 3, characters 10-13:
Was expecting a return type hint (Typing[4030])
File "invalid_arraykey.php", line 3, characters 26-33:
Was expecting a type hint (Typing[4032])
File "invalid_arraykey.php", line 3, characters 47-50:
Was expecting a type hint (Typing[4032])
File "invalid_arraykey.php", line 16, characters 3-14:
Invalid index type for this Map (Typing[4324])
  File "invalid_arraykey.php", line 14, characters 8-12:
  Expected `arraykey` because type parameter `Tk` of `HH\Map` could not be determined. Please add explicit type parameters to the invocation of `HH\Map`
  File "invalid_arraykey.php", line 16, characters 6-9:
  But got `null`
File "invalid_arraykey.php", line 17, characters 3-13:
Invalid index type for this Map (Typing[4324])
  File "invalid_arraykey.php", line 14, characters 8-12:
  Expected `arraykey` because type parameter `Tk` of `HH\Map` could not be determined. Please add explicit type parameters to the invocation of `HH\Map`
  File "invalid_arraykey.php", line 17, characters 6-8:
  But got `float`
File "invalid_arraykey.php", line 21, characters 3-14:
Invalid index type for this Vector (Typing[4324])
  File "invalid_arraykey.php", line 21, characters 6-9:
  Expected `int` because only `int` can be used to index into a `Vector` or `vec`.
  File "invalid_arraykey.php", line 21, characters 6-9:
  But got `null`
File "invalid_arraykey.php", line 22, characters 3-13:
Invalid index type for this Vector (Typing[4324])
  File "invalid_arraykey.php", line 22, characters 6-8:
  Expected `int` because only `int` can be used to index into a `Vector` or `vec`.
  File "invalid_arraykey.php", line 22, characters 6-8:
  But got `float`
File "invalid_arraykey.php", line 26, characters 3-14:
Invalid index type for this vec (Typing[4324])
  File "invalid_arraykey.php", line 26, characters 6-9:
  Expected `int` because only `int` can be used to index into a `Vector` or `vec`.
  File "invalid_arraykey.php", line 26, characters 6-9:
  But got `null`
File "invalid_arraykey.php", line 27, characters 3-13:
Invalid index type for this vec (Typing[4324])
  File "invalid_arraykey.php", line 27, characters 6-8:
  Expected `int` because only `int` can be used to index into a `Vector` or `vec`.
  File "invalid_arraykey.php", line 27, characters 6-8:
  But got `float`
File "invalid_arraykey.php", line 6, characters 3-14:
This value is not a valid key type for this container (Typing[4371])
  File "invalid_arraykey.php", line 4, characters 8-13:
  This container is an object of type dict<string, int>
  File "invalid_arraykey.php", line 6, characters 6-9:
  Null cannot be used as a key for an object of type dict<string, int>
File "invalid_arraykey.php", line 7, characters 3-13:
This value is not a valid key type for this container (Typing[4371])
  File "invalid_arraykey.php", line 4, characters 8-13:
  This container is an object of type dict<?string, int>
  File "invalid_arraykey.php", line 7, characters 6-8:
  A float cannot be used as a key for an object of type dict<?string, int>
File "invalid_arraykey.php", line 11, characters 3-14:
This value is not a valid key type for this container (Typing[4371])
  File "invalid_arraykey.php", line 9, characters 8-13:
  This container is an object of type dict<string, int>
  File "invalid_arraykey.php", line 11, characters 6-9:
  Null cannot be used as a key for an object of type dict<string, int>
File "invalid_arraykey.php", line 12, characters 3-13:
This value is not a valid key type for this container (Typing[4371])
  File "invalid_arraykey.php", line 9, characters 8-13:
  This container is an object of type dict<?string, int>
  File "invalid_arraykey.php", line 12, characters 6-8:
  A float cannot be used as a key for an object of type dict<?string, int>
File "invalid_arraykey.php", line 16, characters 3-14:
This value is not a valid key type for this container (Typing[4371])
  File "invalid_arraykey.php", line 14, characters 8-12:
  This container is an object of type Map<(arraykey & _), _>
  File "invalid_arraykey.php", line 16, characters 6-9:
  Null cannot be used as a key for an object of type Map<(arraykey & _), _>
File "invalid_arraykey.php", line 17, characters 3-13:
This value is not a valid key type for this container (Typing[4371])
  File "invalid_arraykey.php", line 14, characters 8-12:
  This container is an object of type Map<(arraykey & _), _>
  File "invalid_arraykey.php", line 17, characters 6-8:
  A float cannot be used as a key for an object of type Map<(arraykey & _), _>
